--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Bazelisk
-        run: npm -g install bazelisk
+        run: npm -g install @bazel/bazelisk
       - name: Build using bazelisk
         run: bazelisk //main:bbup
