--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Cache home cache
         uses: actions/cache@v2
         with:
-          path: "~/.cache"
-          key: ${{ runner.os }}-${{ hashFiles("~/.cache") }}
+          path: "$HOME/.cache"
+          key: ${{ runner.os }}-${{ hashFiles("$HOME/.cache") }}
       - name: Cache bazelisk stuff
         uses: actions/cache@v2
         with:
